Fix about page overflow

--- a/packages/polocas-napadu-website/components/profiles/ProfileGroupList.scss
+++ b/packages/polocas-napadu-website/components/profiles/ProfileGroupList.scss
@@ -7,6 +7,7 @@
 :local .block {
   background: $primary;
   margin-top: $baseline * 2;
+  overflow: hidden;
 }
 
 :local .container {
